; ModuleID = '/home/carl/AnghaBench/redis/src/extr_db.c_delKeysInSlot.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_db.c_delKeysInSlot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32*, %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i64*, i32 }
%struct.TYPE_9__ = type { i64, i64 }

@server = common dso_local global %struct.TYPE_10__ zeroinitializer, align 8
@.str = private unnamed_addr constant [3 x i8] c">=\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @delKeysInSlot(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_9__, align 8
  %4 = alloca i32, align 4
  %5 = alloca [2 x i8], align 1
  %6 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  %7 = load i32, i32* %2, align 4
  %8 = lshr i32 %7, 8
  %9 = and i32 %8, 255
  %10 = trunc i32 %9 to i8
  %11 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 0
  store i8 %10, i8* %11, align 1
  %12 = load i32, i32* %2, align 4
  %13 = and i32 %12, 255
  %14 = trunc i32 %13 to i8
  %15 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 1
  store i8 %14, i8* %15, align 1
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @server, i32 0, i32 1), align 8
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @raxStart(%struct.TYPE_9__* %3, i32 %18)
  br label %20

20:                                               ; preds = %29, %1
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @server, i32 0, i32 1), align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 0
  %23 = load i64*, i64** %22, align 8
  %24 = load i32, i32* %2, align 4
  %25 = zext i32 %24 to i64
  %26 = getelementptr inbounds i64, i64* %23, i64 %25
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %49

29:                                               ; preds = %20
  %30 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 0
  %31 = call i32 @raxSeek(%struct.TYPE_9__* %3, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %30, i32 2)
  %32 = call i32 @raxNext(%struct.TYPE_9__* %3)
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %3, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = inttoptr i64 %34 to i8*
  %36 = getelementptr inbounds i8, i8* %35, i64 2
  %37 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %3, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = sub nsw i64 %38, 2
  %40 = call i32* @createStringObject(i8* %36, i64 %39)
  store i32* %40, i32** %6, align 8
  %41 = load i32*, i32** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @server, i32 0, i32 0), align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 0
  %43 = load i32*, i32** %6, align 8
  %44 = call i32 @dbDelete(i32* %42, i32* %43)
  %45 = load i32*, i32** %6, align 8
  %46 = call i32 @decrRefCount(i32* %45)
  %47 = load i32, i32* %4, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %4, align 4
  br label %20

49:                                               ; preds = %20
  %50 = call i32 @raxStop(%struct.TYPE_9__* %3)
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i32 @raxStart(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @raxSeek(%struct.TYPE_9__*, i8*, i8*, i32) #1

declare dso_local i32 @raxNext(%struct.TYPE_9__*) #1

declare dso_local i32* @createStringObject(i8*, i64) #1

declare dso_local i32 @dbDelete(i32*, i32*) #1

declare dso_local i32 @decrRefCount(i32*) #1

declare dso_local i32 @raxStop(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
